# zeff-boy

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  Trunk.toml  coi-serviceworker.js  deny.toml  index.html  justfile
.cargo/: config.toml
crates/zeff-emu-common/: Cargo.toml
crates/zeff-emu-common/src/: cheats.rs  debug.rs  lib.rs  save_state.rs
crates/zeff-emu-common/src/replay/: mod.rs  tests.rs
crates/zeff-gb-core/: Cargo.toml
crates/zeff-gb-core/benches/: gb_benchmarks.rs
crates/zeff-gb-core/src/: cheats.rs  color_correction.rs  emulator.rs  lib.rs  replay.rs  rewind.rs  rom_loader.rs
crates/zeff-gb-core/src/cheats/: cht_file.rs  mod.rs  parsers.rs  tests.rs  types.rs
crates/zeff-gb-core/src/debug/: breakpoints.rs  mod.rs  types.rs
crates/zeff-gb-core/src/debug/breakpoints/: mod.rs  tests.rs
crates/zeff-gb-core/src/emulator/: boot_init.rs  debug_view.rs  public_api.rs  runtime.rs  state_io.rs
crates/zeff-gb-core/src/emulator/public_api/: audio.rs  debug.rs  mod.rs  queries.rs
crates/zeff-gb-core/src/hardware/: io.rs  joypad.rs  mod.rs  printer.rs  rom_header.rs  serial.rs  sgb.rs  timer.rs
crates/zeff-gb-core/src/hardware/apu/: frame_seq.rs  mixing.rs  mod.rs  noise.rs  runtime.rs  state.rs
crates/zeff-gb-core/src/hardware/bus/: dma.rs  io_bus.rs  lifecycle.rs  mem_map.rs  mod.rs  oam_corruption.rs  state.rs  tests.rs  trace.rs
crates/zeff-gb-core/src/hardware/cartridge/: huc1.rs  huc3.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mbc7.rs  mod.rs  rom_only.rs
crates/zeff-gb-core/src/hardware/cartridge/mbc1/: mod.rs  tests.rs
crates/zeff-gb-core/src/hardware/cartridge/mbc2/: mod.rs  tests.rs
crates/zeff-gb-core/src/hardware/cartridge/mbc3/: mod.rs  tests.rs
crates/zeff-gb-core/src/hardware/cartridge/mbc5/: mod.rs  tests.rs
crates/zeff-gb-core/src/hardware/cartridge/mbc7/: eeprom.rs  tests.rs
crates/zeff-gb-core/src/hardware/cartridge/pocket_camera/: mod.rs  sensor.rs  tests.rs
crates/zeff-gb-core/src/hardware/cartridge/pocket_camera/sensor/: mod.rs  tests.rs
crates/zeff-gb-core/src/hardware/cpu/: alu.rs  alu_proptests.rs  bitops.rs  mod.rs  registers.rs  tests.rs
crates/zeff-gb-core/src/hardware/opcodes/: alu.rs  bitwise.rs  cb.rs  cycles.rs  dispatch.rs  flow.rs  load.rs  mod.rs
crates/zeff-gb-core/src/hardware/opcodes/flow/: mod.rs  tests.rs
crates/zeff-gb-core/src/hardware/ppu/: mod.rs  palette.rs  renderer.rs  renderer_cgb.rs  renderer_dmg.rs  sgb.rs  sprite.rs  state.rs  tests.rs  tiles.rs  timing.rs
crates/zeff-gb-core/src/hardware/ppu/palette/: mod.rs  tests.rs
crates/zeff-gb-core/src/hardware/ppu/renderer/: mod.rs  renderer_cgb.rs  renderer_dmg.rs  tests.rs
crates/zeff-gb-core/src/hardware/ppu/sgb/: commands.rs  mod.rs  rendering.rs
crates/zeff-gb-core/src/hardware/serial/: mod.rs  tests.rs
crates/zeff-gb-core/src/hardware/sgb/: mod.rs  tests.rs
crates/zeff-gb-core/src/hardware/timer/: mod.rs  tests.rs
crates/zeff-gb-core/src/hardware/types/: apu_constants.rs  cartridge_type.rs  constants.rs  cpu_state.rs  hardware_mode.rs  header_offsets.rs  mod.rs  new_licensee.rs  old_licensee.rs  ram_size.rs  rom_size.rs  timer_clock.rs
crates/zeff-gb-core/src/hardware/types/hardware_mode/: mod.rs  tests.rs
crates/zeff-gb-core/src/replay/: tests.rs
crates/zeff-gb-core/src/rewind/: mod.rs  tests.rs
crates/zeff-gb-core/src/save_state/: bess.rs  decode.rs  encode.rs  mod.rs  tests.rs
crates/zeff-gb-core/src/save_state/bess/: export.rs  import.rs  mod.rs
crates/zeff-libretro/: Cargo.toml  zeff_libretro.info
crates/zeff-libretro/src/: api.rs  callbacks.rs  core.rs  game.rs  input.rs  lib.rs  memory.rs  options.rs  serialization.rs
crates/zeff-nes-core/: Cargo.toml
crates/zeff-nes-core/benches/: nes_benchmarks.rs
crates/zeff-nes-core/src/: cheats.rs  debug.rs  emulator.rs  lib.rs  save_state.rs
crates/zeff-nes-core/src/cheats/: mod.rs  tests.rs
crates/zeff-nes-core/src/debug/: mod.rs  tests.rs  types.rs
crates/zeff-nes-core/src/emulator/: runtime.rs  state_io.rs
crates/zeff-nes-core/src/hardware/: constants.rs  controller.rs  mod.rs
crates/zeff-nes-core/src/hardware/apu/: dmc.rs  mixing.rs  mod.rs  noise.rs  pulse.rs  runtime.rs  triangle.rs
crates/zeff-nes-core/src/hardware/bus/: cpu_io.rs  mod.rs  ppu_bus.rs  rendering.rs
crates/zeff-nes-core/src/hardware/cartridge/: dispatch.rs  header.rs  mod.rs  tests.rs
crates/zeff-nes-core/src/hardware/cartridge/header/: mapper_id.rs  mod.rs  tests.rs
crates/zeff-nes-core/src/hardware/cartridge/mappers/: action52.rs  axrom.rs  cnrom.rs  fme7.rs  mapper16.rs  mmc1.rs  mmc3.rs  mmc5.rs  mod.rs  nrom.rs  uxrom.rs  vrc4.rs
crates/zeff-nes-core/src/hardware/cartridge/mappers/fds/: audio.rs  mod.rs
crates/zeff-nes-core/src/hardware/cartridge/mappers/fme7/: audio.rs  mod.rs  tests.rs
crates/zeff-nes-core/src/hardware/cartridge/mappers/mapper16/: eeprom.rs  mod.rs  tests.rs
crates/zeff-nes-core/src/hardware/cartridge/mappers/mmc3/: mod.rs  tests.rs
crates/zeff-nes-core/src/hardware/cartridge/mappers/mmc5/: banking.rs  mod.rs  tests.rs
crates/zeff-nes-core/src/hardware/cartridge/mappers/namco163/: audio.rs  mod.rs  tests.rs
crates/zeff-nes-core/src/hardware/cartridge/mappers/vrc6/: audio.rs  mod.rs  tests.rs
crates/zeff-nes-core/src/hardware/cartridge/mappers/vrc7/: audio.rs  mod.rs  tests.rs
crates/zeff-nes-core/src/hardware/cpu/: addressing.rs  alu.rs  alu_proptests.rs  mod.rs  opcodes.rs  registers.rs
crates/zeff-nes-core/src/hardware/opcodes/: alu.rs  bitwise.rs  cycles.rs  dispatch.rs  flow.rs  load.rs  mod.rs  tests.rs  unofficial.rs
crates/zeff-nes-core/src/hardware/ppu/: mod.rs  registers.rs  renderer.rs
crates/zeff-nes-core/src/save_state/: mod.rs  tests.rs
crates/zeff-nes-core/tests/: nestest.rs
docs/: accuracy.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_gb_cartridge_load.rs  fuzz_gb_rom_header.rs  fuzz_gb_save_state.rs  fuzz_nes_cartridge_load.rs  fuzz_nes_save_state.rs
packaging/: com.github.zeffuro.zeff-boy.metainfo.xml  zeff-boy.desktop
scripts/: compare-interrupt-trace.ps1  generate-aur.py  (+1 more)
(+332 files in other folders)
