[workspace]
members = ["crates/zeff-emu-common", "crates/zeff-gb-core", "crates/zeff-nes-core"]
exclude = ["fuzz"]

[features]
default = ["camera", "audio-recording"]
camera = ["dep:nokhwa", "dep:image"]
audio-recording = ["dep:vorbis-encoder"]

[package]
name = "zeff-boy"
version = "0.1.0"
edition = "2024"
authors = ["Zeffuro"]
license = "MIT OR Apache-2.0"
description = "A Game Boy, Game Boy Color, and NES emulator written in Rust."
repository = "https://github.com/zeffuro/zeff-boy"

[dependencies]
zeff-emu-common = { path = "crates/zeff-emu-common" }
zeff-gb-core = { path = "crates/zeff-gb-core" }
zeff-nes-core = { path = "crates/zeff-nes-core" }
anyhow = "1.0.102"
cpal = "0.17.3"
env_logger = "0.11.9"
log = "0.4.29"
wgpu = "29.0.1"
winit = "0.30.13"
phf = { version = "0.13.1", features = ["macros"] }
pollster = "0.4.0"
egui = "0.34.1"
egui-winit = "0.34.1"
egui-wgpu = "0.34.1"
rfd = "0.17.2"
gilrs = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
rtrb = "0.3.3"
rubato = "2.0.0"
arc-swap = "1.9.1"
egui_dock = "0.19.1"
crossbeam-channel = "0.5.15"
open = "5.3.3"
png = "0.18.1"
crc32fast = "1.5.0"
chrono = "0.4"
const-hex = "1.18.1"
arrayvec = "0.7.6"
ureq = "3.3.0"
vorbis-encoder = { version = "0.1.4", optional = true }
zip = { version = "8.5.0", default-features = false, features = ["deflate"] }
nokhwa = { version = "0.10.10", optional = true, default-features = false, features = ["input-native"] }
image = { version = "0.25.10", optional = true, default-features = false, features = ["jpeg"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = false