[workspace]
members = ["crates/zeff-emu-common", "crates/zeff-gb-core", "crates/zeff-nes-core", "crates/zeff-libretro"]
exclude = ["fuzz"]

[features]
default = ["camera", "audio-recording"]
camera = ["dep:nokhwa", "dep:image"]
audio-recording = ["dep:vorbis-encoder"]
profile-cores = []

[package]
name = "zeff-boy"
version = "0.1.2"
edition = "2024"
authors = ["Zeffuro"]
license = "MIT OR Apache-2.0"
description = "A Game Boy, Game Boy Color, and NES emulator written in Rust."
repository = "https://github.com/zeffuro/zeff-boy"

[dependencies]
zeff-emu-common = { path = "crates/zeff-emu-common" }
zeff-gb-core = { path = "crates/zeff-gb-core" }
zeff-nes-core = { path = "crates/zeff-nes-core" }
anyhow = "1.0.102"
log = "0.4.29"
wgpu = "29.0.1"
winit = "0.30.13"
phf = { version = "0.13.1", features = ["macros"] }
egui = "0.34.1"
egui-wgpu = "0.34.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rtrb = "0.3.3"
arc-swap = "1.9.1"
egui_dock = "0.19.1"
png = "0.18.1"
crc32fast = "1.5.0"
const-hex = "1.18.1"
arrayvec = "0.7.6"
zip = { version = "8.5.0", default-features = false, features = ["deflate"] }
gilrs = "0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.egui-winit]
version = "0.34.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.egui-winit]
version = "0.34.1"
default-features = false
features = ["links"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.17.3"
env_logger = "0.11.9"
pollster = "0.4.0"
rfd = "0.17.2"
dirs = "6.0.0"
rubato = "2.0.0"
crossbeam-channel = "0.5.15"
open = "5.3.3"
chrono = "0.4"
ureq = "3.3.0"
vorbis-encoder = { version = "0.1.4", optional = true }
nokhwa = { version = "0.10.10", optional = true, default-features = false, features = ["input-native"] }
image = { version = "0.25.10", optional = true, default-features = false, features = ["jpeg"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.117"
wasm-bindgen-futures = "0.4.67"
web-sys = { version = "0.3.94", features = [
    "Window", "Document", "HtmlCanvasElement", "HtmlElement",
    "HtmlAnchorElement", "Element", "Storage", "console",
    "AudioContext", "AudioDestinationNode", "AudioBuffer",
    "AudioBufferSourceNode", "GainNode", "ScriptProcessorNode",
    "AudioProcessingEvent",
    "Blob", "BlobPropertyBag", "File", "FileList", "FileReader",
    "HtmlInputElement", "EventTarget",
    "DragEvent", "DataTransfer",
    "Url",
] }
js-sys = "0.3.94"
console_log = "1"
console_error_panic_hook = "0.1"
web-time = "1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = false

[[bin]]
name = "profile_cores"
required-features = ["profile-cores"]
