[package]
name = "zeff-gb-core"
version = "0.1.0"
edition = "2024"
authors = ["Zeffuro"]
license = "MIT OR Apache-2.0"
description = "Game Boy and Game Boy Color emulation core library."
repository = "https://github.com/zeffuro/zeff-boy"

[dependencies]
anyhow = "1.0.102"
log = "0.4.29"
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
lz4_flex = "0.13.0"
arrayvec = "0.7.6"
crc32fast = "1.5.0"
chrono = "0.4"

