[package]
name = "zeff-gb-core"
version = "0.1.0"
edition = "2024"
authors = ["Zeffuro"]
license = "MIT OR Apache-2.0"
description = "Game Boy and Game Boy Color emulation core library."
repository = "https://github.com/zeffuro/zeff-boy"

[dependencies]
zeff-emu-common = { path = "../zeff-emu-common" }
anyhow = "1.0.102"
bitflags = "2"
log = "0.4.29"
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
arrayvec = "0.7.6"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "gb_benchmarks"
harness = false
