[package]
name = "zeff-libretro"
version = "0.1.0"
edition = "2024"
authors = ["Zeffuro"]
license = "MIT OR Apache-2.0"
description = "Libretro core for zeff-boy (GB/GBC/NES emulator)"

[lib]
crate-type = ["cdylib"]

[dependencies]
zeff-emu-common = { path = "../zeff-emu-common" }
zeff-gb-core = { path = "../zeff-gb-core" }
zeff-nes-core = { path = "../zeff-nes-core" }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
