[package]
name = "zeff-nes-core"
version = "0.1.0"
edition = "2024"
authors = ["Zeffuro"]
license = "MIT OR Apache-2.0"
description = "NES (Nintendo Entertainment System) emulation core library."
repository = "https://github.com/zeffuro/zeff-boy"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
log = "0.4.29"
lz4_flex = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"

